Edit based on Pritam's feedback and comments

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -103,6 +103,17 @@
   publisher={Wiley Online Library}
 }
 
+@article{lohmann1996large,
+  title={A large-scale horizontal routing model to be coupled to land surface parametrization schemes},
+  author={Lohmann, DAG and Nolte-Holube, RALPH and Raschke, Ehrhard},
+  journal={Tellus A},
+  volume={48},
+  number={5},
+  pages={708--721},
+  year={1996},
+  publisher={Wiley Online Library}
+}
+
 @article{minocha2023reservoir,
   title={Reservoir Assessment Tool Version 3.0: A Scalable and User-Friendly Software Platform to Mobilize the Global Water Management Community},
   author={Minocha, Sanchit and Hossain, Faisal and Das, Pritam and Suresh, Sarath and Khan, Shahzaib and Darkwah, George and Lee, Hyongki and Galelli, Stefano and Andreadis, Konstantinos and Oddo, Perry},
